--- a/.env
+++ b/.env
@@ -3,4 +3,6 @@ export DB_PASS=Telyu@123
 export DB_HOST=promaydo.net
 export DB_NAME=promaydo_joshgarden
 
+export DB_PORT=3306
+
 export SECRET_JWT=dhomanhuri
